<resources>
    <string name="app_name">TennisApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player_name">Player name</string>
    <string name="ranking_number">1</string>
    <string name="period">Set 1</string>
    <string name="points">1234</string>
    <string name="point">0</string>
    <string name="game">0</string>
    <string name="atp_single">ATP-single</string>
    <string name="rank_number">#</string>
    <string name="points_title">Points</string>
    <string name="rankings">Rankings</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="adapter_position_ranking">0</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="wta_single">WTA-single</string>
    <string name="country">Country</string>
    <string name="enter_player_name">Enter player name or tournament</string>
    <string name="search">Search</string>
    <string name="live">Live</string>
    <string name="set1">Set 1</string>
    <string name="set2">Set 2</string>
    <string name="set3">Set 3</string>
    <string name="tournament">Tournament</string>
    <string name="type">Type</string>
    <string name="age">Age</string>
    <string name="atp">ATP:</string>
    <string name="results">Results</string>
    <string name="date">date</string>
    <string name="dash">-</string>
    <string name="zero">0</string>
    <string name="colon">:</string>
    <string name="eventDetails">Event Details</string>
    <string name="stats">Stats</string>
    <string name="summary">SUMMARY</string>
    <string name="stats_btn">STATS</string>
    <string name="point_by_point">POINT BY POINT</string>
    <string name="odds">ODDS</string>
    <string name="h2h">H2H</string>
    <string name="s">S</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="service">Service</string>
    <string name="aces">Aces</string>
    <string name="double_faults">Double Faults</string>
    <string name="_1st_serve_percentage">1st Serve Percentage</string>
    <string name="_2nd_serve_percentage">2nd Serve Percentage</string>
    <string name="_1st_serve_points_won">1st Serve Points Won</string>
    <string name="_2nd_serve_points_won">2nd Serve Points Won</string>
    <string name="services_games_played">Services Games Played</string>
    <string name="returnServe">Return</string>
    <string name="first_serve_return_points">1st Serve Return Points</string>
    <string name="second_serve_return_points">2nd Serve Return Points</string>
    <string name="return_games_played">Return Games Played</string>
    <string name="break_points_converted">Break Points Converted</string>
    <string name="break_points_saved">Break Points Saved</string>
    <string name="pointsStat">Points</string>
    <string name="max_points_in_a_row">Max points in a row</string>
    <string name="service_points_won">Service Points Won</string>
    <string name="return_points_won">Return Points Won</string>
    <string name="service_games_won">Service Games won</string>
    <string name="games">Games</string>
    <string name="max_games_in_row">Max Games In Row</string>
    <string name="total_won">Total Won</string>
    <string name="winners">Winners</string>
    <string name="forehand">Forehand</string>
    <string name="backhand">Backhand</string>
    <string name="volley">Volley</string>
    <string name="groundstroke">Groundstroke</string>
    <string name="lob">Lob</string>
    <string name="drop_shot">Drop shot</string>

    <string-array name="Ranking">
        <item>ATP Ranking</item>
        <item>WTA Ranking</item>
    </string-array>
</resources>