<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="40dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ranking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ranking_number"
        android:layout_marginStart="@dimen/padding_start"
        android:paddingTop="@dimen/default_padding"
        android:paddingBottom="@dimen/default_padding"
        android:textSize="@dimen/text_size_ranking"
        app:fontFamily="@font/arvo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/rowName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:hint="@string/player_name"
        android:paddingTop="@dimen/default_padding"
        android:paddingBottom="@dimen/default_padding"
        android:textSize="@dimen/text_size_ranking"
        app:fontFamily="@font/arvo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ranking"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:hint="@string/points"
        android:textSize="@dimen/text_size_ranking"
        app:fontFamily="@font/arvo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>