<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/rankingFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.glacierpower.tennisapp.presentation.search.DetailsFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_playerDetailsFragment"
            app:destination="@id/playerDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/liveEventFragment"
        android:name="com.glacierpower.tennisapp.presentation.live_events.LiveEventFragment"
        android:label="@string/live"
        tools:layout="@layout/fragment_live_event">
        <action
            android:id="@+id/action_liveEventFragment_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment" />
        <action
            android:id="@+id/action_liveEventFragment_to_playerDetailsFragment"
            app:destination="@id/playerDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/eventDetailsFragment"
        android:name="com.glacierpower.tennisapp.presentation.event_details.EventDetailsFragment"
        android:label="@string/eventDetails"
        tools:layout="@layout/fragment_event_details">
        <argument
            android:name="id"
            app:argType="string" />
        <action
            android:id="@+id/action_eventDetailsFragment_to_playerDetailsFragment"
            app:destination="@id/playerDetailsFragment" />

    </fragment>
    <fragment
        android:id="@+id/rankingFragment"
        android:name="com.glacierpower.tennisapp.features.ranking.ui.RankingFragment"
        android:label="RankingFragment" >
        <action
            android:id="@+id/action_rankingFragment_to_playerDetailsFragment"
            app:destination="@id/playerDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/playerDetailsFragment"
        android:name="com.glacierpower.tennisapp.features.player_profile.PlayerProfileFragment"
        android:label="Player Profile" >
        <argument
            android:name="id"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="rank"
            app:argType="string"
            app:nullable="true" />
    </fragment>

</navigation>