<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="110dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tournament"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="2dp"
            android:hint="@string/tournament"
            android:paddingTop="@dimen/default_padding"
            android:paddingBottom="@dimen/default_padding"
            android:textSize="@dimen/text_size_live"
            android:textStyle="bold"
            android:singleLine="true"
            app:fontFamily="@font/arvo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tournament_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="20dp"
            android:hint="@string/type"
            android:paddingTop="@dimen/default_padding"
            android:paddingBottom="@dimen/default_padding"
            android:textSize="@dimen/text_size_tournament"
            android:textStyle="bold"
            app:fontFamily="@font/arvo"
            app:layout_constraintStart_toStartOf="@+id/tournament"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/tournament_image"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/padding_start"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            app:shapeAppearanceOverlay="@style/circleImageView" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/awayTeam"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="5dp"
        android:hint="@string/player_name"
        android:paddingTop="@dimen/default_padding"
        android:paddingBottom="@dimen/default_padding"
        android:singleLine="true"
        android:textSize="@dimen/text_size_live"
        app:fontFamily="@font/arvo"
        app:layout_constraintBottom_toTopOf="@+id/homeTeam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tournamentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:hint="@string/date"
        android:textSize="@dimen/text_size_live"
        app:layout_constraintBottom_toBottomOf="@+id/homeTeam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/awayTeam" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/homeTeam"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/player_name"
        android:paddingTop="@dimen/default_padding"
        android:paddingBottom="@dimen/default_padding"
        android:singleLine="true"
        android:textSize="@dimen/text_size_live"
        app:fontFamily="@font/arvo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/awayTeamPont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:hint="@string/game"
        android:textSize="@dimen/text_size_live"
        app:fontFamily="@font/arvo"
        app:layout_constraintBottom_toBottomOf="@+id/awayTeam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/awayTeam" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/second_player_set2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="7dp"
        android:hint="@string/game"
        android:textSize="@dimen/text_size_live"
        app:fontFamily="@font/arvo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/awayTeam" />

    <View
        android:id="@+id/border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>