<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/rv_player_near_match_size">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/team_image_margin"
        android:background="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tournament"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tournament_tv_margin"
            android:layout_marginTop="@dimen/tournament_tv_margin_top"
            android:hint="@string/tournament"
            android:paddingTop="@dimen/default_padding"
            android:paddingBottom="@dimen/default_padding"
            android:textSize="@dimen/text_size_live"
            android:textStyle="bold"
            android:singleLine="true"
            app:fontFamily="@font/arvo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tournament_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tournament_tv_margin"
            android:layout_marginTop="@dimen/tournament_type_tv_margin_top"
            android:hint="@string/type"
            android:paddingTop="@dimen/default_padding"
            android:paddingBottom="@dimen/default_padding"
            android:textSize="@dimen/text_size_tournament"
            android:textStyle="bold"
            app:fontFamily="@font/arvo"
            app:layout_constraintStart_toStartOf="@+id/tournament"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/tournament_image"
            android:layout_width="@dimen/tournament_image_width"
            android:layout_height="@dimen/tournament_image_height"
            android:layout_marginStart="@dimen/padding_start"
            android:layout_marginTop="@dimen/margin_stats_name"
            android:background="@color/white"
            app:shapeAppearanceOverlay="@style/circleImageView" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/awayTeam"
        android:layout_width="@dimen/tv_team_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tv_team_margin_start"
        android:layout_marginTop="@dimen/tv_team_margin_top"
        android:hint="@string/player_name"
        android:paddingTop="@dimen/default_padding"
        android:paddingBottom="@dimen/default_padding"
        android:singleLine="true"
        android:textSize="@dimen/text_size_live"
        app:fontFamily="@font/arvo"
        app:layout_constraintBottom_toTopOf="@+id/homeTeam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tournamentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_start"
        android:hint="@string/date"
        android:textSize="@dimen/text_size_live"
        app:layout_constraintBottom_toBottomOf="@+id/homeTeam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/awayTeam" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/homeTeam"
        android:layout_width="@dimen/tv_team_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tv_team_margin_start"
        android:layout_marginBottom="@dimen/colon_margin"
        android:hint="@string/player_name"
        android:paddingTop="@dimen/default_padding"
        android:paddingBottom="@dimen/default_padding"
        android:singleLine="true"
        android:textSize="@dimen/text_size_live"
        app:fontFamily="@font/arvo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/awayTeamPont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/team_image_margin"
        android:hint="@string/game"
        android:textSize="@dimen/text_size_live"
        app:fontFamily="@font/arvo"
        app:layout_constraintBottom_toBottomOf="@+id/awayTeam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/awayTeam" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/second_player_set2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/team_image_margin"
        android:layout_marginBottom="@dimen/tv_second_player_set_margin_bottom"
        android:hint="@string/game"
        android:textSize="@dimen/text_size_live"
        app:fontFamily="@font/arvo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/awayTeam" />

    <View
        android:id="@+id/border"
        android:layout_width="match_parent"
        android:layout_height="@dimen/border_size"
        android:background="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>